# wiscopy

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: api_reference.md  examples.md  index.md  quickstart.md  user_guide.md
notebooks/: examples.ipynb
pywisconet/: data.py  process.py  schema.py  variables.py
src/wiscopy/: data.py  interface.py  process.py  schema.py  variables.py
src/wiscopy/static/: cached_fields.json
tests/integration/: test_interface.py
tests/unit/: test_data.py  test_inferface.py  test_interface.py  test_process.py  test_retry.py  test_utilities.py  test_wisconetstation.py  utilities.py
