[tool.poetry]
name = "wisconet"
version = "0.1.0"
description = ""
authors = ["ilmcconnell"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
httpx = "^0.27.0"
pandas = "^2.2.2"
hvplot = "^0.10.0"
pyparsing = "^3.1.2"
matplotlib = "^3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
