[project]
dependencies = []
name = "wiscopy"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
wiscopy = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pydantic = ">=2.12.5,<3"
httpx = ">=0.28.1,<0.29"
pandas = ">=3.0.2,<4"
aiolimiter = ">=1.2.1,<2"

[tool.pixi.feature.dev.tasks]
test = "pytest tests/unit/"
test-integration = "pytest tests/integration/"

[tool.pixi.feature.dev.dependencies]
pytest = "*"
ruff = "*"
ipykernel = "*"
hatch = "*"
pytest-asyncio = "*"

[tool.pixi.feature.plot.dependencies]
hvplot = "*"
matplotlib = "*"

[tool.pixi.feature.notebook.dependencies]
jupyterlab = "*"
notebook = "*"

[tool.pixi.feature.build.dependencies]
uv = "*"

[tool.pixi.environments]
dev = ["plot", "dev"]
notebook = ["plot", "notebook"]
build = { features = ["build"], no-default-feature = true }
