[project]
authors = [{name = "Iain McConnell", email = "ilmcconnell@github.id"}]
readme = "README.md"
description = "A Python API wrapper for the Wisconsin environmental mesonet API: Wisconet"
dependencies = [
    "pydantic>=2.12.5,<3",
    "httpx>=0.28.1,<1",
    "pandas>=3.0.2,<4",
    "aiolimiter>=1.2.1,<2",
    "tqdm>=4.0",
]
name = "wiscopy"
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]

[project.optional-dependencies]
plot = [
    "hvplot>=0.11.2",
    "matplotlib>=3.10.1",
]

[project.urls]
Homepage = "https://github.com/UW-Madison-DSI/wiscopy"
Issues = "https://github.com/UW-Madison-DSI/wiscopy/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options.version_scheme = "no-guess-dev"

[tool.hatch.build]
hooks.vcs.version-file = "src/wiscopy/_version.py"
targets.sdist.ignore-vcs = true
targets.sdist.include = [
    "LICENSE",
    "README.md",
    "pyproject.toml",
    "pixi.lock",
    "/src",
]
targets.sdist.exclude = [
    "/tests",
]
targets.wheel.packages = ["src/wiscopy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
wiscopy = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pydantic = ">=2.12.5,<3"
httpx = ">=0.28.1,<1"
pandas = ">=3.0.2,<4"
aiolimiter = ">=1.2.1,<2"
tqdm = ">=4.0"

[tool.pixi.feature.dev.tasks]
test = "pytest tests/unit/"
test-integration = "pytest tests/integration/"
format = "ruff format ."
format-check = "ruff format --check ."
lint = "ruff check ."
pre-push = { depends-on = ["format", "lint", "test"], description = "Format, lint, and run unit tests before pushing" }
ci = { depends-on = ["format-check", "lint", "test"], description = "CI: verify formatting, lint, and run unit tests" }

[tool.pixi.feature.dev.dependencies]
pytest = "*"
ruff = "*"
ipykernel = ">=7.2.0,<8"
hatch = "*"
pytest-asyncio = "*"
ipywidgets = ">=8.1.8,<9"
jupyter = ">=1.1.1,<2"

[tool.pixi.feature.plot.dependencies]
hvplot = "*"
matplotlib = "*"


[tool.pixi.feature.notebook.tasks]
start = "jupyter lab notebooks/examples.ipynb"

[tool.pixi.feature.notebook.dependencies]
jupyterlab = "*"
ipywidgets = ">=8.1.8,<9"


[tool.pixi.feature.build.dependencies]
uv = "*"

[tool.pixi.feature.build.tasks.build]
description = "Build a sdist and wheel"
cmd = """
rm -rf dist && \
uvx --from build pyproject-build && \
uvx twine check --strict dist/*
"""

[tool.pixi.feature.ci-test.dependencies]
pytest = "*"
python = "*"
pytest-asyncio = ">=1.3.0,<2"

[tool.pixi.feature.ci-test.tasks]
test-wheel = { cmd = "uv pip install dist/*.whl && pytest tests/unit", depends-on = ["build"] }


[tool.pixi.environments]
dev = ["plot", "dev"]
notebook = ["plot", "notebook"]
build = { features = ["build"], no-default-feature = true }
clean-room = { features = ["ci-test", "build"], no-default-feature = true }
